--- a/glados/pubspec.yaml
+++ b/glados/pubspec.yaml
@@ -5,12 +5,13 @@ version: 1.1.7
 repository: https://github.com/MarcelGarus/glados
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  characters: ^1.1.0
+  characters: ^1.3.0
   meta: ^1.11.0
+  spec: ^0.2.3
   test: ^1.20.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^4.0.0
